# Projet_MGA802

./: LICENSE.md  Numerical Optimization Methods for Continuous Functions.docx  README.md  __init__.py  apprentissage.py  extra_fonctions.py  main.py  optimisation.py  requirements.txt  setup.cfg  start.bat  structure.py
Calcul_Force_EM/: Cable.py  ChampMagnetique.py  Force_Electro.py  Geometrie_fct.py  Graphs.py  Materiaux.py  Satellite.py  Test_Cable_rectiligne.py  Test_Courbe_Parametree.py  Test_Force_Electro.py  Test_angles.py  Test_zigzag.py
