[metadata]
name = RalentissementSatellites
version = 1.0
author = Zacharie Simoneau
description = Ceci est un projet pour le cours MGA802.
long_description = Ce projet consiste à génerer une structure optimale afin de ralentir un satellite lors de son désorbitage.
url = https://en.wikipedia.org/wiki/Satellite
keywords = satellite, désorbitage, force de Lorentz
[options]
python_requires = >=3.8
install_requires =
    numpy
    scipy
    streamlit
    plotly
    matplotlib
    tqdm
    astropy
    pandas
